// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Camera props testing className="my-classname" 1`] = `
<div
  className="uu5-bricks-camera my-classname"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing controlled=false 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing controlled=true 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing default props 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing disabled=false 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing disabled=true 1`] = `
<div
  className="uu5-bricks-camera uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing hidden=false 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing hidden=true 1`] = `
<div
  className="uu5-bricks-camera uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing id="myId" 1`] = `
<div
  className="uu5-bricks-camera"
  id="myId"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing name="myName" 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Camera props testing nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.Camera props testing nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.Camera props testing nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing noIndex=false 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing noIndex=true 1`] = `
<div
  className="uu5-bricks-camera uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing pureRender=false 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing pureRender=true 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing selected=false 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing selected=true 1`] = `
<div
  className="uu5-bricks-camera uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;

exports[`UU5.Bricks.Camera props testing tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-camera"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <video
    autoPlay="true"
    className="uu5-bricks-camera-video"
  />
  <canvas
    className="uu5-bricks-camera-canvas"
  />
</div>
`;
